<resources>
    <string name="facebook_app_id" translatable="false">289431478336751</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="app_name">WinGa</string>
    <string name="app_name_dev" translatable="false">WinGa-dev</string>
    <string name="app_name_local" translatable="false">WinGa-local</string>
    <string name="app_name_staging" translatable="false">WinGa-staging</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="somthing_wrong">Something went wrong. Please try again.</string>
    <string name="password">Password</string>
    <string name="password_mandate">Password *</string>
    <string name="forgot_password_qstn">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="login_small">Login</string>
    <string name="register">REGISTER</string>
    <string name="or_login">Or Login</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google</string>
    <string name="firstname">Display name *</string>
    <string name="age_range">Age range *</string>
    <string name="email">Email</string>
    <string name="left_for_today_draw">Left for the session</string>
    <string name="my_history">My history</string>
    <string name="yesterday_winner">Recent winners</string>
    <string name="iam_ready">I\'m ready</string>
    <string name="askquestions">Answer questions</string>
    <string name="invites">Invites</string>
    <string name="share">Share</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="addresses">Addresses</string>
    <string name="view_all">View All</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="support">Support</string>
    <string name="terms_conditions"><![CDATA[Terms and Conditions]]></string>
    <string name="privacy_policy"><![CDATA[Privacy Policy]]></string>
    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="tap_to_copy">Tap to copy</string>
    <string name="share_code">Share code</string>
    <string name="next">Next</string>
    <string name="city">City *</string>
    <string name="locality_area_street">Locality area or street *</string>
    <string name="flatnum_buildingname">Flat number, building name *</string>
    <string name="landmark_optional">Landmark (Optional)</string>
    <string name="type">Type *</string>
    <string name="pincode">Pincode *</string>
    <string name="state">State *</string>
    <string name="save">Save</string>
    <string name="my_addresses">My addresses</string>
    <string name="change_password">Change password</string>
    <string name="deactivate_acct">Deactivate account</string>
    <string name="turn_off_notications">Turn off notifications</string>
    <string name="enable_notications">Enable notifications</string>
    <string name="languages">Languages</string>
    <string name="results">Results</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="filters">Filters</string>
    <string name="pending">Pending</string>
    <string name="inprocess">In process</string>
    <string name="delivered">Delivered</string>
    <string name="apply">Apply</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="default_string">Default</string>
    <string name="set_as_primary">Set as Primary</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="current_password">Current password *</string>
    <string name="new_password">New password *</string>
    <string name="retype_password">Re-type new password *</string>
    <string name="save_changes">Save changes</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="mobile_num">Mobile number</string>
    <string name="otp">OTP</string>
    <string name="resend">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="india">India</string>
    <string name="other">Other</string>
    <string name="your_registration">Your registration</string>
    <string name="successful">Successful</string>
    <string name="you_won_a">You won %s</string>
    <string name="submit">Submit</string>
    <string name="write_comment">Write comment</string>
    <string name="send">Send</string>
    <string name="alerts_promos_updates"><![CDATA[Alerts & Promotions / Updates]]></string>
    <string name="alerts">Alerts</string>
    <string name="promotions">Promotions</string>
    <string name="updates">Updates</string>
    <string name="do_u_want_logout">Do you want to logout?</string>
    <string name="to_continue_in_en" translatable="false">To continue in English</string>
    <string name="to_continue_in_te" translatable="false">కొనసాగడానికి తెలుగు</string>
    <string name="to_continue_in_hi" translatable="false">जारी रखने के लिए हिन्दी</string>
    <string name="to_continue_in_mr" translatable="false">सुरु ठेवण्यासाठी मराठी</string>
    <string name="to_continue_in_ta" translatable="false">தொடர தமிழ்</string>
    <string name="to_continue_in_kn" translatable="false">ಸೈನ್ ಇನ್ ಮಾಡಲು ಕನ್ನಡ</string>
    <string name="to_continue_in_ml" translatable="false">മലയാളത്തിൽ തുടരാൻ</string>
    <string name="to_continue_in_be" translatable="false">বাংলায় চালিয়ে যেতে</string>
    <string name="i_accept">I accept</string>
    <string name="redeem_points">Redeem points</string>
    <string name="play_more_games">Watch more</string>
    <string name="phoneNum">Mobile number</string>
    <string name="find_your_mobile">Find your mobile number</string>
    <string name="enter_code">Enter Code</string>
    <string name="sent_code_desc">A text message with 6-digit verification code was just sent to %s</string>
    <string name="point_rupee">%s Point = \u20B9 %s </string>
    <string name="rs" translatable="false">\u20B9</string>
    <string name="not_a_valid_user">Invalid user credentials</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="enter_valid_phone">Enter your valid mobile number</string>
    <string name="enter_password">Enter valid password</string>
    <string name="enter_current_password">Enter valid current password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_sent">OTP sent on your number</string>
    <string name="only_answers_correct">Only %s answers are correct</string>
    <string name="enter_valid_ver_code">Enter valid verification code</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_reenter_password">Enter Re-type password</string>
    <string name="passwords_mustbesame">Password and Re-type password must be same</string>
    <string name="change_password_success">Password updated successfully</string>
    <string name="enter_name">Enter your Display name</string>
    <string name="no_special_characters_name">Display name field should not contain any special characters</string>
    <string name="no_special_characters_city">City field should not contain any special characters</string>
    <string name="enter_valid_email">Enter your valid Email ID</string>
    <string name="enter_valid_city">Enter your city name</string>
    <string name="enter_valid_pincode">Enter your valid Pin-code</string>
    <string name="please_accept_terms"><![CDATA[Accept Terms & Conditions to proceed]]></string>
    <string name="money_transfer">Money Transfer</string>
    <string name="transfer_to_payttm">Transfer money to your Paytm wallet</string>
    <string name="enable_transfer">Enable to transfer money</string>
    <string name="paytm_wallet">Paytm Wallet</string>
    <string name="allows_to_add_beneficiary">allows you to add beneficiary for money transfer from Paytm wallet</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="paytm" translatable="false">Paytm</string>
    <string name="please_select_answer_to_continue">Select your answer to continue</string>
    <string name="logged_out">Logged out successfully</string>
    <string name="content">Content</string>
    <string name="successfully_submitted">Successfully Submitted</string>
    <string name="select_valid_comment">Enter valid comment</string>
    <string name="you_are_in_level">You are in %s level</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="youtube_init_error">Unable to initialize youtube. Try again.</string>
    <string name="exit">Exit</string>
    <string name="do_u_want_exit">Do you want to Exit App?</string>
    <string name="please_select_address_type">Select address type</string>
    <string name="updated_primary_address_successfully">Primary address updated successfully</string>
    <string name="deleted_address_successfully">Address deleted successfully</string>
    <string name="address_added_successfully">Address added successfully</string>
    <string name="address_edited_successfully">Address edit successful</string>
    <string name="add_address">Add Address</string>
    <string name="enter_valid_locality">Enter valid locality area or street</string>
    <string name="enter_valid_flatnum_bul_name">Enter valid flat no. and building name</string>
    <string name="oops">Ooops!</string>
    <string name="no_internet">No internet connection found</string>
    <string name="check_connection">check your connection</string>
    <string name="retry">Retry</string>
    <string name="you_are_lucky_star">Yippie! you are the lucky star. You have won %s</string>
    <string name="contact_for_info">Contact WinGa for further information</string>
    <string name="congratulations">Congratulations!</string>
    <string name="answer"> %s %s Answer</string>
    <string name="welcome">Welcome</string>
    <string name="starts_on">Starts on %s</string>
    <string name="resend_code">Resend code</string>
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="thank_u_for_playing">Thank you for watching.</string>
    <string name="for_more_chances_participate">For more chances to win, keep participating.</string>
    <string name="good_luck">Good luck!</string>
    <string name="update_from_camera">Upload picture from Camera</string>
    <string name="upload_from_gallery">Upload picture from Photo Library</string>
    <string name="remove_photo">Remove photo</string>
    <string name="do_it_later">Do it later</string>
    <string name="day_by_day">Day by day</string>
    <string name="no_history">No history</string>
    <string name="play_multiple_days">Play multiple days</string>
    <string name="and_win_gifts">and win gifts</string>
    <string name="upload_photo_from">Upload photo from:</string>
    <string name="special_session">Special session</string>
    <string name="close">Close</string>
    <string name="transfer_may_fail_paytm">Transfer may not work in case</string>
    <string name="paytm_failure_reason_one">1. You do not have a paytm account with your mobile number used in WinGa. Please create a paytm account.</string>
    <string name="paytm_failure_reason_two">2. You may not done paytm KYC. In this case, you will receive an SMS from Paytm when WinGa tries to transfer cash into your Paytm Wallet.</string>
    <string name="paytm_failure_reason_three">3. Your limit in Paytm may have overflown. Paytm allows monthly 10,000 for Min KYC customers. For increasing limit you need to do Paytm full KYC. Maximum limit for Full KYC customers is 1,00,000.</string>
</resources>