<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_may_fail_paytm"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paytm_failure_reason_one"
            android:layout_marginTop="@dimen/fifteen"
            android:textColor="@color/colorBlack"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paytm_failure_reason_two"
            android:layout_marginTop="@dimen/ten"
            android:textColor="@color/colorBlack"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paytm_failure_reason_three"
            android:layout_marginTop="@dimen/ten"
            android:textColor="@color/colorBlack"
            android:textSize="14dp" />




        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="end"
            android:layout_marginTop="@dimen/ten"
            android:padding="10dp"
            android:text="@string/close"
            android:textColor="@color/app_theme_red"
            android:textSize="14dp"
            android:textStyle="bold" />



    </LinearLayout>


</RelativeLayout>