<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/nointernet" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/oops"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:gravity="center_horizontal"
            android:text="@string/no_internet"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/check_connection"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            android:textSize="16dp" />


    </LinearLayout>

    <Button
        android:id="@+id/retryBtn"
        style="@style/red_gradient_btn_style"
        android:layout_marginRight="@dimen/sixty"
        android:layout_marginTop="@dimen/sixty"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/forty"
        android:text="@string/retry"
        android:textSize="16dp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_regular"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>