<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/transcolorBlack_sixty">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            android:padding="@dimen/five"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/pop_up_margin"
            android:layout_marginRight="@dimen/pop_up_margin"
            android:gravity="center">


            <LinearLayout
                android:id="@+id/contentLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_round_corner_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/thirty_five">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:gravity="center"
                    android:text="@string/better_luck_next_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/losepopup" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/thank_u_for_playing"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/for_more_chances_participate"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/good_luck"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:id="@+id/continueBtn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_below="@+id/contentLL"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="-25dp"
                android:background="@drawable/red_gradient_button_bg"
                android:paddingLeft="@dimen/fifty"
                android:paddingRight="@dimen/fifty"
                android:text="@string/play_more_games"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />


        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>




