<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/topRL">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/winga_bg_color"
        android:orientation="vertical"
        android:layout_above="@+id/adBannerFramgnet">

        <!--<include layout="@layout/headerlay" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/questionbg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/ten"
                android:padding="@dimen/five"
                android:src="@drawable/ic_back_black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/thirty"
                android:text="@string/special_session"
                android:textColor="@color/colorBlack"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/thirty"
                android:text="@string/day_by_day"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/noItemsLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_history"
                android:textColor="@color/no_history_color"
                android:textSize="24dp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/play_multiple_days"
                android:textColor="@color/no_history_color"
                android:textSize="18dp"
                android:visibility="visible" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/and_win_gifts"
                android:textColor="@color/no_history_color"
                android:textSize="18dp"
                android:visibility="visible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/loyaltyPointsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/thirty"
            android:paddingRight="@dimen/twenty"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_special_session" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>

    <fragment
        android:id="@+id/adBannerFramgnet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:layout_alignParentBottom="true"
        android:name="in.eightfolds.winga.fragment.AdBannerFragment"/>

</RelativeLayout>